--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,11 @@ header{
     background-color: #FF6900;
     padding: 15px 0px;
     box-shadow: 0px 1px 5px 1px rgb(164, 164, 164);
+    position: fixed;
+    width: 100%;
+    top: 0;
+    margin-bottom: 60px;
+    z-index: 10;
 }
 
 .header{
@@ -87,6 +92,10 @@ div.icons{
 }
 
                                                 /* main */
+
+main {
+margin-top: 100px;
+}
 
 .heart{
     display: inline-block;
